infrastructure_code/cdk.out/localstack.template.json
{
 "Resources": {
  "AnimeVerseVPC9F6762D3": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "AnimeVerseVPC"
     }
    ]
   }
  },
  "AnimeVerseVPCPublicSubnet1SubnetDC370151": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet1RouteTable57F85575": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet1RouteTableAssociationA5C77D1E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPublicSubnet1RouteTable57F85575"
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPublicSubnet1SubnetDC370151"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet1DefaultRoute713A12A0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AnimeVerseVPCIGW1758BB8C"
    },
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPublicSubnet1RouteTable57F85575"
    }
   },
   "DependsOn": [
    "AnimeVerseVPCVPCGWD92B2869"
   ]
  },
  "AnimeVerseVPCPublicSubnet1EIPB535ABF2": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet1"
     }
    ]
   }
  },
  "AnimeVerseVPCPublicSubnet1NATGatewayF01669A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "AnimeVerseVPCPublicSubnet1EIPB535ABF2",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPublicSubnet1SubnetDC370151"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "AnimeVerseVPCPublicSubnet1DefaultRoute713A12A0",
    "AnimeVerseVPCPublicSubnet1RouteTableAssociationA5C77D1E"
   ]
  },
  "AnimeVerseVPCPublicSubnet2SubnetF5B9380D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet2RouteTableB5DDC601": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet2RouteTableAssociationF526CA6B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPublicSubnet2RouteTableB5DDC601"
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPublicSubnet2SubnetF5B9380D"
    }
   }
  },
  "AnimeVerseVPCPublicSubnet2DefaultRoute717DFA33": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AnimeVerseVPCIGW1758BB8C"
    },
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPublicSubnet2RouteTableB5DDC601"
    }
   },
   "DependsOn": [
    "AnimeVerseVPCVPCGWD92B2869"
   ]
  },
  "AnimeVerseVPCPublicSubnet2EIP7855594F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet2"
     }
    ]
   }
  },
  "AnimeVerseVPCPublicSubnet2NATGateway8253C3D6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "AnimeVerseVPCPublicSubnet2EIP7855594F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPublicSubnet2SubnetF5B9380D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "AnimeVerseVPCPublicSubnet2DefaultRoute717DFA33",
    "AnimeVerseVPCPublicSubnet2RouteTableAssociationF526CA6B"
   ]
  },
  "AnimeVerseVPCPrivateSubnet1SubnetEF1A347D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet1RouteTableEFB84B5A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet1RouteTableAssociationE951B947": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPrivateSubnet1RouteTableEFB84B5A"
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPrivateSubnet1SubnetEF1A347D"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet1DefaultRoute89E7E79A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AnimeVerseVPCPublicSubnet1NATGatewayF01669A6"
    },
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPrivateSubnet1RouteTableEFB84B5A"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet2Subnet5023AB71": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet2RouteTable3278CD98": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/AnimeVerseVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet2RouteTableAssociation85823F86": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPrivateSubnet2RouteTable3278CD98"
    },
    "SubnetId": {
     "Ref": "AnimeVerseVPCPrivateSubnet2Subnet5023AB71"
    }
   }
  },
  "AnimeVerseVPCPrivateSubnet2DefaultRouteEA1461B8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AnimeVerseVPCPublicSubnet2NATGateway8253C3D6"
    },
    "RouteTableId": {
     "Ref": "AnimeVerseVPCPrivateSubnet2RouteTable3278CD98"
    }
   }
  },
  "AnimeVerseVPCIGW1758BB8C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AnimeVerseVPC"
     }
    ]
   }
  },
  "AnimeVerseVPCVPCGWD92B2869": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "AnimeVerseVPCIGW1758BB8C"
    },
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "AnimeVerseVPCPrivateSubnet1SubnetEF1A347D"
     },
     {
      "Ref": "AnimeVerseVPCPrivateSubnet2Subnet5023AB71"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-database",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ProfileServiceDBSubnetGroupB0052912": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for ProfileServiceDB database",
    "SubnetIds": [
     {
      "Ref": "AnimeVerseVPCPrivateSubnet1SubnetEF1A347D"
     },
     {
      "Ref": "AnimeVerseVPCPrivateSubnet2Subnet5023AB71"
     }
    ]
   }
  },
  "ProfileServiceDBSecurityGroup29B27103": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ProfileServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "AnimeVerseVPC9F6762D3"
    }
   }
  },
  "localstackProfileServiceDBSecretBFF158B13fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ProfileServiceDBSecretAttachmentBC0087A7": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackProfileServiceDBSecretBFF158B13fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "ProfileServiceDB7B759CD2"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "ProfileServiceDB7B759CD2": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "user-database",
    "DBSubnetGroupName": {
     "Ref": "ProfileServiceDBSubnetGroupB0052912"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackProfileServiceDBSecretBFF158B13fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "ProfileServiceDBSecurityGroup29B27103",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "ProfileServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "ProfileServiceDB7B759CD2",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "ProfileServiceDB7B759CD2",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  }
 }
}
